# OpenTau

./: .cursorignore  .cursorindexingignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  combine_coverage.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/scripts/: check_state_keys.py  utils.py
.github/workflows/: build-docker-images.yml  check-pr-checklist.yml  claude-implement-fixes.yml  claude-pr-review.yml  cpu_test.yml  extract-claude-lessons.yml  gpu_test.yml  network_test.yml  pre-commit.yml  publish-pypi.yml  regression_test.yml
.gitlab/scripts/: check_accumulate_grad_sync.py  check_loss_drop.py  check_nonzero_grad_norm.py  check_state_keys.py  utils.py
AETHER_SOLUTIONS/: issue_177.md
configs/benchmarks/: cosmos3.json  pi05.json  pi05_mem.json  pi07_high_level.json  pi07_low_level.json  pi07_paligemma_high_level.json  pi07_paligemma_low_level.json
configs/dev/: ci_config.json  dev_config.json
configs/examples/: accelerate_deepspeed_zero3_config.yaml  accelerate_fsdp2_config.yaml  accelerate_fsdp_config.yaml  add_subtask_response.json  advantage_config.json  annotate_mistakes_example.json  attach_metadata_annotations.json  ci_config.json  cosmos3_nano_training_config.json  cosmos3_single_layer_config.json  cosmos3_training_config.json  dev_config.json  pi05_config.json  pi05_continuous_state_training_config.json  pi05_inference_config.json  pi05_libero_eval_config.json  pi05_mem_motion_training_config.json  pi05_mem_training_config.json  pi05_robocasa_eval_config.json  pi05_training_config.json  pi06_training_config.json  pi07_libero.json  pi07_low_level_libero.json  pi_config.json  prompt_substitutions_example.json  ros2lerobot.json  segments.json  task_segments.json  train_mixture_config.json  value_config.json
configs/libero/: reproduce_pi05_libero.json  reproduce_pi05_libero_accelerate_config_tuned.yaml  reproduce_pi05_libero_accelerate_config_tuned_8gpu.yaml  reproduce_pi05_libero_accelerate_config_zero1.yaml  reproduce_pi05_libero_accelerate_config_zero1_8gpu.yaml  reproduce_pi05_libero_deepspeed_tuned.json  reproduce_pi05_libero_deepspeed_zero1.json
configs/oracle/: pi07_paligemma_subgoal_2s.json
docs/: README.md
docs/source/: api.rst  concepts.rst  conf.py  contributing.rst  getting_started.rst  index.rst  installation.rst  model.rst  overview.rst  tutorials.rst
example/: train_mixture_config.json
lerobot/common/: constants.py
lerobot/configs/: policies.py
lerobot/scripts/: cloud_robot_inference.py  download_libero_benchmarks.py  eval.py  export_to_onnx.py  fake_tensor_training.py  get_advantage_and_percentiles.py  libero_simulation_sequential.py  nav_high_level_planner_inference.py  train.py  visualize_dataset_html.py
notebooks/: pi05_evaluation_only.ipynb  pi05_training.ipynb
scripts/: add_license_header.py
src/opentau/: __init__.py  __version__.py  constants.py
tests/: conftest.py  test_available.py  utils.py
tests/configs/: test_default.py  test_parser.py  test_refs.py  test_train.py  test_utils_policies.py
tests/datasets/: test_action_dim.py  test_action_indexing.py  test_compute_stats.py  test_dataset_mixture.py  test_datasets.py  test_datasets_v30.py  test_delta_action_stats.py  test_delta_timestamps.py  test_feature_mapping_dual_split.py  test_image_transforms.py  test_image_writer.py  test_loc_codec.py  test_loc_tokens_gemma3.py  test_loc_tokens_paligemma.py  test_name_mapping_collision.py  test_norm_key_aggregation.py  test_obs_history.py  test_online_buffer.py  test_optional_keys.py  test_prompt_substitution.py  test_sampler.py  test_segment_lerobot_dataset.py  test_speed_percentiles.py  test_success_role.py  test_tagged_dataset.py  test_utils.py  test_video_utils.py  test_visualize_dataset.py  test_vqa_provenance.py
tests/envs/: test_configs.py  test_factory.py  test_libero_control_freq.py  test_metaworld.py  test_robocasa.py  test_subgoal.py  test_utils.py
tests/fixtures/: config_factory.py  configs.py  constants.py  dataset_factories.py  files.py  hub.py  optimizers.py  planner.py  policies.py  utils.py
tests/optim/: test_master_weights.py  test_optimizers.py  test_schedulers.py
tests/planner/: test_gemini_er_planner.py  test_memory.py  test_planner.py
tests/policies/: test_action_dim_mask.py  test_config_version_norm.py  test_cosmos3_cpu.py  test_cosmos3_gpu.py  test_cosmos3_nano_cpu.py  test_cosmos3_nano_gpu.py  test_flash_attn_cuda.py  test_freeze_vision_only_helper.py  test_history_drop_current_frame.py  test_knowledge_insulation.py  test_layers.py  test_local_visual_encoder.py  test_native_resolution.py  test_normalize_per_dataset.py  test_outlier_detection.py  test_per_group_projection.py  test_pi0.py  test_pi05.py  test_pi05_mem.py  test_pi05_mem_gpu.py  test_pi05_paligemma_with_expert_flex.py  test_pi06.py  test_pi07_attention_layout.py  test_pi07_cpu.py  test_pi07_high_level_planner.py  test_pi07_low_level.py  test_pi07_low_level_planner.py  test_pi07_low_level_shim.py  test_pi07_paligemma_attention_layout.py  test_pi07_paligemma_high_level_planner.py  test_pi07_paligemma_low_level.py  test_pi07_paligemma_low_level_planner.py  test_pi07_paligemma_outlier_warning.py  test_pi07_per_group_projection.py  test_pi07_untrained.py  test_pi07_video_encoder_cpu.py  test_policies.py  test_pretrained_skip_normalization.py  test_rldx_motion_cpu.py  test_save_pretrained_skip_stats.py  (+4 more)
tests/scripts/: test_add_subtask_response.py  test_annotate_mistakes.py  test_annotate_subtasks.py  test_attach_metadata.py  test_diagnose_norm_distribution.py  test_eval.py  test_eval_lockstep.py  test_extract_cosmos3_reasoner.py  test_fake_tensor_training.py  test_find_unused_params.py  test_fit_fast_tokenizer.py  test_grpc_auth.py  test_grpc_planner_server.py  test_loss_weighting_skip.py  test_outlier_logging.py  test_pi_mem_data_generator.py  test_profile_dataloader.py  test_profile_step.py  test_so101_device_paths.py  test_train.py  test_verify_adam_dtype_pure.py
tests/utils/: test_hub.py  test_import_utils.py  (+8 more)
(+355 files in other folders)
