# Copyright 2024 The HuggingFace Inc. team. All rights reserved.
# Copyright 2026 Tensor Auto Inc. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project.urls]
homepage = "https://github.com/TensorAuto/OpenTau"
issues = "https://github.com/TensorAuto/OpenTau/issues"
huggingface = "https://huggingface.co/TensorAuto"

[project]
name = "opentau"
version = "0.4.0"
description = "OpenTau: Tensor's VLA Training Infrastructure for Real-World Robotics in Pytorch"
authors = [
    { name = "Shuheng Liu", email = "wish1104@icloud.com" },
    { name = "William Yue", email = "williamyue37@gmail.com" },
    { name = "Akshay Shah", email = "akshayhitendrashah@gmail.com" },
]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = "==3.10.*"
keywords = ["robotics", "deep learning", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "cmake>=3.29.0.1",
    "datasets>=2.19.0",
    "deepdiff>=7.0.1",
    "diffusers>=0.27.2",
    "draccus>=0.10.0",
    "einops>=0.8.0",
    "flask>=3.0.3",
    "gdown>=5.1.0",
    "h5py>=3.10.0",
    "huggingface-hub[hf-transfer,cli]>=0.27.1 ; python_version < '4.0'",
    "imageio[ffmpeg]>=2.34.0",
    "mediapipe>=0.10.0",
    "jsonlines>=4.0.0",
    "numba>=0.62.0",
    "omegaconf>=2.3.0",
    "opencv-python-headless>=4.9.0",
    "packaging>=24.2",
    "av>=12.0.5",
    "pymunk>=6.6.0",
    "pynput>=1.7.7",
    "pyzmq>=26.2.1",
    "rerun-sdk>=0.21.0",
    "termcolor>=2.4.0",
    "torch>=2.7.1",
    "torchcodec>=0.4.0, <0.5.0; sys_platform != 'win32' and (sys_platform != 'linux' or (platform_machine != 'aarch64' and platform_machine != 'arm64' and platform_machine != 'armv7l')) and (sys_platform != 'darwin' or platform_machine != 'x86_64')",
    "torchvision>=0.22.1",
    "wandb>=0.16.3",
    "zarr>=2.17.0",
    "scikit-learn>=1.7.1",
    "onnx>=1.18.0",
    "onnxruntime>=1.22.1 ; sys_platform == 'darwin' or platform_machine == 'arm64' or platform_machine == 'aarch64'",
    "onnxruntime-gpu>=1.22.0 ; ((sys_platform == 'linux' and platform_machine == 'x86_64') or (sys_platform == 'win32' and (platform_machine == 'AMD64' or platform_machine == 'x86_64'))) ",
    "onnxscript>=0.3.1",
    "onnx-ir>=0.1.4",
    "transformers==4.53.3",
    "scipy>=1.15.2",
    "pytest>=8.1.0",
    "pytest-cov>=5.0.0",
    "pyserial>=3.5",
    "pytest-xdist>=3.8.0",
    "scikit-image>=0.23.2",
    "pandas>=2.2.2",
    "accelerate>=1.4.0",
    "deepspeed>=0.17.1",
    "gymnasium[other]>=0.29",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
    "deepspeed>=0.17.1",
    "rosbags>=0.10.4",
    "openai>=2.16.0",
    "python-dotenv>=1.2.1",
    "anthropic>=0.55.0",
    "google-genai>=1.0.0",
]

[project.scripts]
opentau-train = "opentau.scripts.launch:train"
opentau-eval = "opentau.scripts.launch:eval"
opentau-export = "opentau.scripts.launch:export"
opentau-dataset-viz = "opentau.scripts.launch:visualize"

[project.optional-dependencies]
dev = ["pre-commit>=3.7.0",
    "debugpy>=1.8.1",
    "pytest>=8.1.0",
    "pytest-cov>=5.0.0",
    "pyserial>=3.5",
    "pytest-xdist>=3.8.0",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.1",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "myst-parser>=4.0.0",
]
libero = [
    "cmake<4",
    "ninja",
    "bddl==1.0.1",
    "easydict==1.9",
    "future==0.18.2",
    "matplotlib>=3.5.3",
    "robomimic==0.2.0",
    "robosuite==1.4.0",
    "thop==0.1.1.post2209072238",
    "mujoco>=3.3.5",
    "PyOpenGL==3.1.7",
    "libero",
    "numpy<2",
    "gym>=0.25,<0.27",
    "pyopengl-accelerate==3.1.7 ; sys_platform == 'linux'",
    "mujoco>=3.1.6 ; sys_platform == 'linux'",
    "pyopengl==3.1.7 ; sys_platform == 'linux'",
    "numpy==1.26.4 ; sys_platform == 'linux'",
]
urdf = [
    "rerun-sdk>=0.28.2",
]
robocasa = [
    # RoboCasa kitchen sim. Most runtime deps (numpy, mujoco, lerobot, gymnasium,
    # opencv-python, imageio, termcolor, lxml, hidapi, numba, pygame) come from
    # robocasa's own setup.py — listed below only when robocasa needs them but does
    # not declare them, or when we need a tighter version floor than robocasa does.
    # Mutually exclusive with the `libero` extra (numpy 2.x vs <2).
    "robocasa",
    "robosuite>=1.5.0",         # robocasa imports robosuite at top-level but does not declare it
    "glfw>=2.0",                # required by mujoco's viewer; not pulled by robocasa
    "msgpack>=1.0",             # used by scripts/robocasa/server.py
    "websockets>=11.0",         # used by scripts/robocasa/server.py
]
trt = [
    "tensorrt>=10.15.1.29 ; (sys_platform == 'linux' and platform_machine == 'x86_64') or (sys_platform == 'win32' and (platform_machine == 'AMD64' or platform_machine == 'x86_64'))",
]

[tool.uv.sources]
libero = { git = "https://github.com/shuheng-liu/LIBERO" , branch = "master" }  # the official libero repo is misconfigured for pip install with git
# RoboCasa is shipped as a separate sim package; track upstream main. Replace with a
# fork (e.g. `{ git = "https://github.com/<your-fork>/robocasa", branch = "..." }`) or a
# local checkout (`{ path = "../robocasa", editable = true }`) if you carry local
# patches. The OpenTau wrapper only depends on `robocasa.utils.env_utils.create_env`,
# so an unmodified upstream install is sufficient.
robocasa = { git = "https://github.com/robocasa/robocasa", branch = "main" }
# RoboCasa uses upstream robosuite **master** APIs (`get_elements`,
# `xml_path_completion`-variants) that aren't in PyPI's `robosuite==1.5.x`. Scope this
# source to the robocasa extra via `extra = "robocasa"` so libero — which pins
# `robosuite==1.4.0` from PyPI — falls back to the index resolution.
robosuite = [
    { git = "https://github.com/ARISE-Initiative/robosuite", branch = "master", extra = "robocasa" },
]

# libero depends on gym, which depends on numpy 1.x, while rerun only supports urdf in v0.28 which requires numpy 2.x
[tool.uv]
# `extra-build-dependencies` (used below for egl-probe's CMake pin) is only
# honored by uv >= 0.8.4. Without this guard, older uv silently ignores the key
# and the build regresses to the original CMake 4 failure with a confusing
# message. Bumping this floor errors loudly with a clear pointer instead.
required-version = ">=0.8.4"
# RoboCasa's setup.py declares hard equality pins (numpy==2.2.5, numba==0.61.2,
# scipy==1.15.3) that collide with opentau's own floors (numba>=0.62.0) and with
# whatever other extras pull in. Force compatible versions across the whole resolve so
# `uv sync --extra robocasa` succeeds without forking robocasa's setup.py. The override
# applies regardless of the active extra — it's a no-op for libero/urdf because they
# don't repin numba and the numpy bound here is satisfied by libero's numpy<2 too.
override-dependencies = [
    "numba>=0.62.0",
    "scipy>=1.13",
    # Both opentau and lerobot want draccus>=0.10, but the robocasa-extras resolve
    # currently picks 0.8.0 (an old shared transitive constraint). Force the modern
    # version explicitly so `singledispatch(include_subclasses=...)` is available.
    "draccus>=0.10.0",
    # robocasa's setup.py pins tianshou==0.4.10, which transitively requires
    # protobuf<3.20 — clashing with opentau's protobuf>=4.25. Tianshou 1.x requires
    # Python>=3.11 (we're on 3.10), so we can't bump it. Force protobuf to opentau's
    # range instead; opentau never actually exercises tianshou code paths, and
    # tianshou's protobuf usage is limited to a tensorboard pb shim that still imports
    # on protobuf 4.x at runtime even if its declared pin says otherwise.
    "protobuf>=4.25",
]
conflicts = [
  [
    { extra = "libero" },
    { extra = "urdf" },
  ],
  # robocasa pins numpy 2.x; libero pulls numpy<2. Force users to pick one sim at a time.
  [
    { extra = "libero" },
    { extra = "robocasa" },
  ],
  # robocasa transitively pulls rerun-sdk<0.23 (via lerobot 0.3.3), while urdf needs
  # rerun-sdk>=0.28.2. Declare them mutually exclusive so the resolver bails fast.
  [
    { extra = "urdf" },
    { extra = "robocasa" },
  ],
]
# egl-probe (transitive via robomimic in the libero extra) ships an sdist whose
# CMakeLists declares cmake_minimum_required(VERSION 2.8.12). CMake 4.0 dropped
# pre-3.5 compatibility, so the build aborts on systems where the build's `cmake`
# resolves to a 4.x binary. Pin cmake<4 in egl-probe's PEP 517 build isolation:
# uv puts the build venv's bin at the front of PATH for the build subprocess,
# so the bundled 3.x cmake wins regardless of what's installed system-wide.
extra-build-dependencies = { egl-probe = ["cmake<4"] }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "N", "B", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Server must implement gRPC interface with PascalCase method names
"src/opentau/scripts/grpc/server.py" = ["N802"]
# Uppercase names for rotation matrices follow standard math convention
"src/opentau/scripts/recordhuman_to_lerobot.py" = ["N803", "N806"]

[tool.bandit]
exclude_dirs = [
    "tests",
    "src/opentau/datasets/push_dataset_to_hub",
    "src/opentau/datasets/v2/convert_dataset_v1_to_v2"
]
skips = ["B101", "B311", "B404", "B603"]

[tool.typos]
default.extend-ignore-re = [
    "(?Rm)^.*(#|//)\\s*spellchecker:disable-line$", # spellchecker:disable-line
    "(?s)(#|//)\\s*spellchecker:off.*?\\n\\s*(#|//)\\s*spellchecker:on", # spellchecker:<on|off>
]
default.extend-ignore-identifiers-re = [
    # Add individual words here to ignore them
    "2nd",
    "pn",
    "Pn",  # RoboCasa task names use "Pn" prefix (e.g. PnPCounterToCab)
    "Metalic",  # upstream RoboCasa class name (OrganizeMetalicUtensils)
    "ser",
    "ein",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (runtime > 1s).",
    "gpu: marks tests as gpu (uses gpu)."
]
